# dynamic-particles-sim

./: LICENSE  README.md  main_grafica.py  pyproject.toml
backend/src/domain/: interfaces.py
backend/src/domain/entities/: particle_system.py  properties.py
backend/src/infrastructure/: interaction.py
plotting/: plot_particles2.py
