[project]
name = "sim-anillos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beanie>=1.29.0",
    "fastapi[standard]>=0.115.11",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "torch>=2.7.0",
]
